filebrowser/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:s6
        ports:
        - containerPort: 80
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: filebrowser-data
          mountPath: /database
        - name: filebrowser-config
          mountPath: /config
      volumes:
      - name: filebrowser-data
        persistentVolumeClaim:
          claimName: filebrowser-data-pvc
      - name: filebrowser-config
        persistentVolumeClaim:
          claimName: filebrowser-config-pvc
