filebrowser/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
