filebrowser/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.efym.net`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: filebrowser
          port: 80
  tls:
    secretName: efym-net-tls
